--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Phpno1\\Dictionaries\\Test\\": "tests/"
+            "Phpno1\\Dictionaries\\Test\\": "Tests/"
         }
     }
 }
