--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "phpunit/phpunit": "~6.0"
+    },
     "autoload":{
         "psr-4":{
             "App\\": "app/",
@@ -19,7 +21,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Phpno1\\Dictionaries\\Test\\": "Tests/"
+            "Phpno1\\Dictionaries\\Test\\": "tests/"
         }
     }
 }
