--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "phpno1/dictionary",
-    "description": "laravel data dictionary trans form",
+    "description": "laravel data dictionary mapping",
     "license": "MIT",
     "authors": [
         {
